CGC MERN Stack HTML Assignment

--- a/index.html
+++ b/index.html
@@ -4,6 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to CGC MERN Stack Training</title>
+
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color:antiquewhite;
+        }
+
+        header {
+            background-color: #0ceeb5f9;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+        }
+
+        h1 {
+            margin: 0;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        thead {
+            background-color:grey;
+        }
+
+        th, td {
+            padding: 8px 12px;
+            border: 1px solid #ddd;
+            text-align: left;
+        }
+
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #333;
+            color: white;
+        }
+
+
+    </style>
 </head>
 <body>
     <Header>
@@ -17,21 +75,79 @@
 
         <div>
             <ul>
-                <li><strong>HTML Tags:</strong> like h1 to h6, p, strong, br, li, ul, ol, a, img, etc.</li>
-                <li><strong>Forms :</strong> input, textarea, select, checkbox, radio, etc.</li>
-                <li>Relative Path and Absolute Path</li>
-                <li>List Tags and Table Tags</li>
-                <li>Block level Elements and Inline Elements</li>
+                <li>
+                    <strong>HTML Tags:</strong> 
+                    like h1 to h6, p, strong, br, li, ul, ol, a, img, etc.
+
+                    <select name="" id="">
+                        <option value="">h1 tag</option>
+                        <option value="">h2 tag</option>
+                        <option value="">h3 tag</option>
+                        <option value="">h4 tag</option>
+                        <option value="">h5 tag</option>
+                        <option value="">h6 tag</option>
+                        <option value="">p tag</option>
+                        <option value="">strong tag</option>
+                        <option value="">br tag</option>
+                        <option value="">li tag</option>
+                        <option value="">ul tag</option>
+                        <option value="">ol tag</option>
+                        <option value="">a tag</option>
+                        <option value="">img tag</option>
+                        <option value="">etc.,</option>
+                    </select>
+                </li>
+                <li>
+                    <strong>Forms :</strong>
+                    input, textarea, select, checkbox, radio, etc.
+                    
+                    <select name="" id="">
+                        <option value="">input</option>
+                        <option value="">textarea</option>
+                        <option value="">select</option>
+                        <option value="">option drop-down</option>
+                        <option value="">checkbox</option>
+                        <option value="">radio button</option>
+                    </select>
+                </li>
+                <li>Relative Path and Absolute Path.
+                    <select name="" id="">
+                        <option value="">Relative Path</option>
+                        <option value="">Absolute Path</option>
+                    </select>
+
+                </li>
+                <li>List Tags
+                    <select name="" id="">
+                        <option value="">Order List</option>
+                        <option value="">Un-order List</option>
+                    </select>
+                </li>
+                <li>Table Tags
+                    <select name="" id="">
+                        <option value="">Table</option>
+                        <option value="">Thead</option>
+                        <option value="">Tbody</option>
+                        <option value="">Tr</option>
+                        <option value="">Th</option>
+                        <option value="">Td</option>
+                    </select>
+                <li>Block level Elements and Inline Elements
+                    <select name="" id="">
+                        <option value="">Block level Elements</option>
+                        <option value="">Inline Elements</option>
+                    </select>
+                </li>
             </ul>
         </div>
 
         <div>
-            <table>
-                <th>
+            <table >
+                <thead>
                     <td>Topic</td>
                     <td>Description</td>
                     <td>Example</td>
-                </th>
+                </thead>
                 <tr>
                     <td>HTML</td>
                     <td>Hyper Text Markup Language</td>
@@ -62,23 +178,32 @@
         <div>
             <form action="">
                 <label for="name">Name:</label>
-                <input type="text">
+                <input type="text" required>
                 <br>
                 <label for="Email">Email:</label>
-                <input type="email">
+                <input type="email" required>
                 <br>
-                <label for="Message">Enter your message:</label>
-                <input type="Message" name="Message">
+                <label for="Message" >Enter your message:</label>
+                <input type="Message" name="Message" required>
+                <br>
                 <label for="password">Password</label>
                 <input type="text" name="password" required>
+                <br>
                 <label for="Re-enter Password">Re-enter Password</label>
                 <input type="password" name="password" required>
+                <br>
+                <label type="checkbox">I have read all the terms and conditions</label>
+                <input type="checkbox">
+                <br>
                 <button>Submit</button>
             </form>
         </div>
     </main>
     <footer>
-
+        <div>
+            <p>&copy; 2022 Abdul Aamir</p>
+        </div>
     </footer>
+
 </body>
 </html>
